--- a/pre/mini-message-board-main/package.json
+++ b/pre/mini-message-board-main/package.json
@@ -1,24 +1,31 @@
 {
-  "name": "mini-message-board",
-  "version": "0.0.0",
+  "name": "express-locallibrary-tutorial",
+  "version": "0.0.1",
+  "engines": {
+    "node": "18.16.1"
+  },
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
     "devstart": "nodemon ./bin/www",
-    "serverstart": "DEBUG=mini-message-board:* npm run devstart"
+    "serverstart": "DEBUG=express-locallibrary-tutorial:* npm run devstart"
   },
   "dependencies": {
-    "cookie-parser": "~1.4.4",
-    "debug": "~2.6.9",
-    "ejs": "^3.1.8",
+    "compression": "^1.7.4",
+    "cookie-parser": "^1.4.6",
+    "debug": "~4.3.4",
     "express": "^4.18.2",
-    "http-errors": "~1.6.3",
-    "morgan": "~1.9.1"
+    "express-async-handler": "^1.2.0",
+    "express-rate-limit": "^7.1.3",
+    "express-validator": "^7.0.1",
+    "helmet": "^7.0.0",
+    "http-errors": "~2.0.0",
+    "luxon": "^3.4.3",
+    "mongoose": "^7.6.3",
+    "morgan": "^1.10.0",
+    "pug": "^3.0.2"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
-  },
-  "engines": {
-    "node": "16.14.2"
   }
 }
